RESOLVED FIXED276537
Media plays with blank screen on first load
https://bugs.webkit.org/show_bug.cgi?id=276537
Summary Media plays with blank screen on first load
Jean-Yves Avenard [:jya]
Reported 2024-07-12 06:29:30 PDT
When you play a webm or a <video> using a MediaSource and make use of a poster. On iPhone, on first load the video will play with a blank screen but audio can be heard. STR: on iPhone, open https://jyavenard.github.io/htmltests/tests/130231703/ WebM with poster and MSE video with poster will play with a black screen
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2024-07-12 06:30:01 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-07-16 04:50:27 PDT
EWS
Comment 3 2024-07-18 04:50:17 PDT
Committed 281083@main (d898352e05bd): <https://commits.webkit.org/281083@main> Reviewed commits have been landed. Closing PR #30859 and removing active labels.
EWS
Comment 4 2024-07-23 13:52:42 PDT
Committed 280938.99@safari-7619-branch (eda9048fc5cd): <https://commits.webkit.org/280938.99@safari-7619-branch> Reviewed commits have been landed. Closing PR #1453 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.