Media plays with blank screen on first load https://bugs.webkit.org/show_bug.cgi?id=276537 rdar://130231703

Reviewed by Jer Noble.

The AVPlayerLayer may not have been created yet by the time we setup the video fullscreen.
We ensure that the AVPlayerLayer has been created first.

Tests added.

* LayoutTests/media/media-source/content/test-vp8-24fps-manifest.json: Added.
* LayoutTests/media/media-source/content/test-vp8-24fps.webm: Added. The Simulator in the iOS 17 simulator doesn't support mp4, h264 nor vp9. So add a vp8/webm video that doesn't rely on CoreMedia for playback so we can test.
* LayoutTests/media/media-source/media-managedmse-video-with-poster-expected.html: Added.
* LayoutTests/media/media-source/media-managedmse-video-with-poster.html: Added.
* LayoutTests/media/media-vp8-webm-with-poster-expected.html: Added.
* LayoutTests/media/media-vp8-webm-with-poster.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations: Skip test on wk1, we don't have MMS support there.
* Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm:
(WebKit::VideoPresentationManagerProxy::setupFullscreenWithID):

Canonical link: https://commits.webkit.org/281083@main